10-AGIC-Probes-Default-and-HTTP/01-kube-manifests-default-backend/03-Ingress-Default-Backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress-service
spec:
  ingressClassName: azure-application-gateway
  defaultBackend:
    service:
      name: myapp-nginx-clusterip-service
      port: 
        number: 80
